# autonomous2023

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.nogpu  Dockerfile.silicon  README.md  build.sh  capture.launch  clean.sh  devcontainer.json  docker-compose.yml  foxglove-silicon.sh  hq  launch.sh  mkdocs.yml  requirements.nogpu.txt  requirements.txt  requirements_jetson.txt  requirements_pc.txt  rosbag.sh  run  run_pegasus.sh  run_sim.sh  settings.json  start.dev.sh  start.prod.sh  stop.sh
ROS/src/common/node_fixture/: CMakeLists.txt  package.xml  requirements.txt
ROS/src/common/node_fixture/include/: managed_node.hpp
ROS/src/common/node_fixture/src/: managed_node.cpp  node_fixture.cpp
ROS/src/common/orion_state/: CMakeLists.txt  package.xml
ROS/src/common/orion_state/dbc/: lv.dbc
ROS/src/common/orion_state/launch/: orion_state.launch
ROS/src/common/orion_state/src/: orion_manual_state.py  orion_state.py  scheduling.py
ROS/src/common/pedal_mapper/: CMakeLists.txt  package.xml
ROS/src/common/pedal_mapper/launch/: pedal_mapper.launch
ROS/src/common/pedal_mapper/src/: pedal_mapper.py
ROS/src/common/ublox_gps/: package.xml
ROS/src/common/ublox_gps/launch/: gps.launch  parse_ublox_file.launch  save_cones.launch
ROS/src/common/ublox_gps/scripts/: parse_ublox.py  save_cone.py
ROS/src/common/ublox_gps/src/: ntripclient.c  run.cpp  serial.c
ROS/src/common/ugr_ros_control/: CMakeLists.txt
ROS/src/common/ugr_ros_control/gen4_control/: CMakeLists.txt  package.xml
ROS/src/common/ugr_ros_control/orion_control/: CMakeLists.txt  package.xml
ROS/src/common/ugr_ros_control/pegasus_control/: package.xml
ROS/src/common/ugr_ros_control/scripts/: analyze_trajectory.m
ROS/src/common/ugr_ros_control/src/: generic_hw_interface.cpp
ROS/src/control/boundary_estimation/: CMakeLists.txt  package.xml  setup.py
ROS/src/control/boundary_estimation/include/: boundary_estimation.hpp  color_connector.hpp  utils.hpp
ROS/src/control/boundary_estimation/launch/: boundary_estimation.launch
ROS/src/control/boundary_estimation/src/: boundary_estimation.cpp  boundary_estimation.py  color_connector.cpp  distance_path.py  local_boundaries.py  node.py  run.cpp  utils.cpp
ROS/src/control/control_controller/: CMakeLists.txt  package.xml  setup.py
ROS/src/control/control_controller/launch/: acceleration_racing.launch  autocross_exploration.launch  controller.launch  skidpad_racing.launch  skidpad_small_racing.launch  trackdrive.launch  trackdrive_exploration.launch  trackdrive_racing.launch
ROS/src/control/control_controller/paths/: convert.py  skidpad.yaml  skidpad_small.yaml  straight_L100.yaml  straight_L25.yaml  straight_L75.yaml
ROS/src/control/control_controller/scripts/: controller.py  path_publisher.py
ROS/src/control/minimum_curvature/: CMakeLists.txt  package.xml  setup.py
ROS/src/control/minimum_curvature/launch/: minimum_curvature.launch  visualiser_mincurv.launch
ROS/src/control/minimum_curvature/visualise/: bezier.py  buttons.py  draw.py  visualise_mincurv.py  visualiser.py
ROS/src/control/pathplanning/: CMakeLists.txt  package.xml  pathplanning.ipynb  setup.py
ROS/src/control/pathplanning/include/: boundary_estimation.hpp  center_points.hpp  color_connector.hpp  delaunay.hpp  pathplanning.hpp  paths.hpp  triangulator.hpp  utils.hpp
ROS/src/control/pathplanning/launch/: pathplanning.launch  pathplanning_new.launch  rrt.launch  triangulation.launch  visualiser.launch
ROS/src/control/pathplanning/scripts/: run_node.py  smooth_path.py
ROS/src/control/pathplanning/src/: boundary_estimation.cpp  center_points.cpp  color_conector.cpp  delaunay.cpp  pathplanning.cpp  paths.cpp  run.cpp  triangulator.cpp  utils.cpp
ROS/src/control/pathplanning/visualise/: MANUAL_PATH_VISUALISER.md  bezier.py  bezierPoint.py  buttons.py  draw.py  utils.py  visualise_pathplanning.py  visualiser.py
ROS/src/general/autonomous_state/: package.xml
ROS/src/general/autonomous_state/launch/: autonomous_state.launch
ROS/src/general/autonomous_state/src/: state_supervisor.py
ROS/src/general/monitor/: CMakeLists.txt  package.xml
ROS/src/general/monitor/src/: cpu_monitor.py
ROS/src/general/node_fixture/: CMakeLists.txt  package.xml  setup.py
ROS/src/general/node_launcher/: CMakeLists.txt  package.xml  setup.py
ROS/src/general/observation_vis/: CMakeLists.txt  package.xml
ROS/src/general/ugr_launch/: CMakeLists.txt  package.xml
ROS/src/general/ugr_msgs/: CMakeLists.txt  package.xml
ROS/src/jetson_can/: CMakeLists.txt  package.xml
ROS/src/jetson_can/launch/: jetson_can.launch
ROS/src/jetson_can/scripts/: can_listener.py
ROS/src/locmap/locmap_clustering/: CMakeLists.txt  package.xml
ROS/src/locmap/locmap_fastslam/: .gitignore  CMakeLists.txt  cython_setup.sh  package.xml  setup.py
ROS/src/locmap/locmap_loopclosure/: CMakeLists.txt  package.xml
ROS/src/locmap/locmap_slam/: CMakeLists.txt  package.xml
ROS/src/locmap_controller/: CMakeLists.txt
ROS/src/locmap_controller/action/: StartSimulation.action
ROS/src/locmap_controller/launch/: locmap_controller.launch
ROS/src/locmap_controller/msg/: ServiceRequest.msg  ServiceResponse.msg
ROS/src/locmap_controller/scripts/: actionserver.py  interface.py  servicecaller.py  servicehandler.py
ROS/src/locmap_controller/srv/: Launch.srv  Stop.srv
ROS/src/mechatronics/can_node/: CMakeLists.txt  PDU.dbc  package.xml
ROS/src/mechatronics/dio_driver/: CMakeLists.txt  package.xml
ROS/src/pathplanning/: README.md  package.xml  setup.py
ROS/src/pathplanning/launch/: pathplanning.launch
ROS/src/pathplanning/scripts/: run_node.py
ROS/src/perception_jetson/: CMakeLists.txt  package.xml
ROS/src/perception_jetson/launch/: perception_jetson.launch
ROS/src/perception_jetson/scripts/: IntBoundingBox.py  cone_detection.py  cone_pnp.py  keypoint_detection.py  run.py
ROS/src/simulation/: CMakeLists.txt  package.xml
ROS/src/simulation/launch/: gt_map_server.launch
ROS/src/simulation/scripts/: gt_map_server.py
ROS/src/tools/: CMakeLists.txt  package.xml  setup.py
(+1375 files in other folders)
