<?xml version="1.0"?>
<package format="2">
  <name>jetson_can</name>
  <version>0.0.0</version>
  <description>The jetson_can package</description>
  <maintainer email="lucas.vandijck@ugentracing.be">Lucas Van Dijck</maintainer>
  <license>UGR</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
