<?xml version="1.0"?>
<package format="2">
  <name>pathplanning</name>
  <version>0.0.1</version>
  <description> Description
  </description>

  <maintainer email="kilian.janssens@ugentracing.be">Kilian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  
  <export></export>
</package>