<?xml version="1.0"?>
<package format="2">
    <name>perception_jetson</name>
    <version>0.0.0</version>
    <description>The perception pipeline package</description>

    <maintainer email="lucas.vandijck@ugentracing.be">Lucas Van Dijck</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>cv_bridge</exec_depend>

    <export>

    </export>
</package>
