<?xml version="1.0"?>
<package format="2">
  <name>ublox_gps</name>
  <version>0.0.0</version>
  <description>The ublox_gps package</description>
  <maintainer email="lowiek.vandenstockt@ugentracing.be">Lowiek Van den Stockt</maintainer>
  <license>UGR</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>