<?xml version="1.0"?>
<package format="2">
  <name>boundary_estimation</name>
  <version>0.0.0</version>
  <description>The boundary_estimation package</description>

  <maintainer email="robbe.galle@ugentracing.be">Robbe Galle</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>


  </export>
</package>
