<?xml version="1.0"?>
<package format="2">
  <name>control_controller</name>
  <version>0.0.1</version>
  <description>
  This is the controller of Control
  </description>

  <maintainer email="zander.daninck@ugentracing.be">zander</maintainer>

  <license>TODO</license>

  <build_depend>ugr_msgs</build_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <export></export>
</package>