<?xml version="1.0"?>
<package format="2">
  <name>pathplanning</name>
  <version>0.0.1</version>
  <description> This package contains the pathplanning algorithm
  </description>

  <maintainer email="zander.daninck@ugentracing.be">Zander</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>ugr_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <export></export>
</package>