<?xml version="1.0"?>
<package format="2">
  <name>autonomous_state</name>
  <version>0.0.0</version>
  <description>The node_fixture package</description>

  <maintainer email="gilles@todo.todo">gilles</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>


  </export>
</package>
