<?xml version="1.0"?>
<package format="2">
  <name>monitor</name>
  <version>0.0.0</version>
  <description>package for monitoring the stack</description>

  <maintainer email="lowie.slachmuylders@ugentracing.be">Lowie Slachmuylders</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export></export>
</package>