<?xml version="1.0"?>
<package format="2">
  <name>node_launcher</name>
  <version>0.0.0</version>
  <description>The node_launcher package</description>

  <maintainer email="zander.daninck@ugentracing.be">zander</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export></export>
</package>