<?xml version="1.0"?>
<package format="2">
  <name>observation_vis</name>
  <version>0.0.0</version>
  <description>A visualisation module for Observation messages</description>

  <maintainer email="tristan.dhoedt@ugentracing.be">lowiek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export></export>
</package>
