<?xml version="1.0"?>
<package format="2">
  <name>ugr_launch</name>
  <version>0.0.0</version>
  <description>The ugr_launch package</description>

  <maintainer email="lowiek.vandenstockt@ugentracing.be">lowiek</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>