<?xml version="1.0"?>
<package format="2">
  <name>locmap_slam</name>
  <version>0.0.0</version>
  <description>
    The generic SLAM module of Localisation and Mapping. It takes in odometry and observations. 
    It spits out a track estimate and (optionally) localization feedback.
    These are primarily used for Local SLAM and Global SLAM components. 

    This module supports multiple algorithms, like FastSLAM and FastMapping,
    all developed and maintained in their own respective packages.
  </description>

  <maintainer email="lowiek.vandenstockt@ugentracing.be">lowiek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  
  <exec_depend>locmap_fastslam</exec_depend>
  <exec_depend>locmap_fastmapping</exec_depend>

  <export></export>
</package>